# privacy-intent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
privacy_intent/: automation.py  cli.py  scanner.py
privacyintent/: __init__.py  cli.py  scanner.py
privacyintent/detectors/: cookies.py  pii.py
tests/: test_automation.py
